--- a/pom.xml
+++ b/pom.xml
@@ -48,5 +48,10 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.1.5.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
